syntax = "proto3";
import "google/protobuf/timestamp.proto";
option java_package = "com.example.systemevents";


service SystemEvents{
  rpc logAction(Request)  returns (Response);
}

message Request{
  enum tipAkcije {
    CREATE = 0;
    DELETE = 1;
    GET = 2;
    UPDATE = 3;
  }

  google.protobuf.Timestamp timeStampAkcije = 1;
  string nazivMikroservisa = 2 ;
  string Korisnik = 3 ;
  tipAkcije Akcija = 4;
  string nazivResursa = 5;
}

message Response{
  enum tipOdgovora {
    USPJESNO = 0;
    GRESKA = 1;
  }
  string porukaOdgovora = 1;
  tipOdgovora Odgovor= 2;
}